--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 		<title>Hello Webgl!</title>
 	</head>
 	<body>
+		<style>
+			#main {
+				width: 100%;
+				height: 100%;
+			}
+		</style>
 		<div id="main"></div>
 		<!-- Main -->
-		<script src="/js/lib.js"></script>
 		<script src="/js/bundle.js"></script>
 		<script></script>
 	</body>
